--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jetswap-uikit",
+  "name": "bitswap-uikit",
   "version": "0.0.16",
   "description": "Set of UI components for pancake projects",
   "main": "dist/index.cjs.js",
